<resources>
    <string name="app_name">abuserTest</string>
    <string name="test_name">Я — абьюзер? Пройдите тест и узнайте</string>

    //questions
    <string name="question1">Если ваш партнер (-ка) поменяет пароли во всех социальных сетях, как вы отреагируете?</string>
    <string name="question2">Вы собрались познакомить своего партнера (-ку) с родителями. Но ее/его одежда для встречи кажется вам неподходящей. Вы:</string>
    <string name="question3">Ваш партнер (-ка) хочет обсудить проблемы в отношениях. Как вы отнесетесь к этому разговору?</string>
    <string name="question4">Вы обсуждаете, как проведете предстоящие выходные, и желания вашего партнера (-ки) не совпадают с вашими. За кем будет последнее слово?</string>
    <string name="question5">В каких случаях вы можете повысить голос на своего партнера (-ку)?</string>
    <string name="question6">Возлюбленный (-ая) долго не отвечает на звонки и сообщения, но вы знаете, что у нее/него важные дела. Забьете тревогу?</string>
    <string name="question7">Бывает ли, что вы говорите: «Если ты не [сделаешь что‑то необходимое], значит, ты меня не любишь»?</string>
    <string name="question8">Бывало ли, что вы делились с кем‑то маленьким и не особо важным, по вашему мнению, секретом партнера (-ки)?</string>
    <string name="question9">Ваш партнер делает что‑то, что, по вашему мнению, ему вредит (плохо питается, имеет вредные привычки, проводит много времени за компьютером и т. д.). Что будете делать?</string>
    <string name="question10">А говорите ли вы своему партнеру такие ласковые и подшучивающие слова, как «моя любимая глупышка», «мой дурачок», «кто это такой пухленький поросенок?» и т. д.</string>

    //answers
    <string name="answer1One">Я об этом даже не узнаю, никогда не слежу за такими вещами</string>
    <string name="answer1Two">Поинтересуюсь, для чего это понадобилось, но вряд ли он/она что‑то от меня скрывает</string>
    <string name="answer1Three">Попрошу дать мне новые пароли — я чувствую себя спокойнее, когда знаю, с кем общается и что делает мой (-я) партнер (-ка)</string>

    <string name="answer2One">Заставлю переодеться. Я ведь лучше знаю, как произвести хорошее впечатление на своих родителей</string>
    <string name="answer2Two">Аргументированно попрошу переодеться. Если получу отказ, я, конечно, не обрадуюсь, но возражать не буду</string>
    <string name="answer2Three">Я не думаю, что внешний вид сыграет какую‑то роль. Главное, чтобы ей/ему было комфортно</string>

    <string name="answer3One">Я не против. Если ее/его что‑то не устраивает, пусть выскажется</string>
    <string name="answer3Two">Не люблю эти выяснения отношений, они всегда превращаются в вынос мозга</string>
    <string name="answer3Three">Думаю, нам есть над чем поработать. Хорошо, что мы пришли к этому разговору</string>

    <string name="answer4One">Мы найдем компромисс, а если нет — выходные не обязательно проводить вместе. Поедем туда, куда хотим, по отдельности</string>
    <string name="answer4Two">Обычно я всегда беру все в свои руки и решаю, что мы будем делать. А партнер (-ка) со мной соглашается</string>
    <string name="answer4Three">Мы поспорим, приведем аргументы и выберем что‑нибудь одно</string>

    <string name="answer5One">Я считаю это неприемлемым. И если иногда срываюсь, то сразу прошу прощения</string>
    <string name="answer5Two">Я могу повысить голос, только если партнер (-ка) спровоцирует ссору своим поведением или словами</string>
    <string name="answer5Three">Бывает, что я кричу во время ссор, потому что иначе не могу до нее/него достучаться</string>

    <string name="answer6One">Нет, он/она меня предупредил (-а), что может задержаться. Спокойно займусь своими делами</string>
    <string name="answer6Two">Подожду еще некоторое время и начну переживать, мало ли что случилось</string>
    <string name="answer6Three">Да. И, вообще-то, написать короткое сообщение, что с ней/ним все в порядке, не занимает много времени!</string>

    <string name="answer7One">Нет, я считаю, что это манипуляции, которые не ведут ни к чему хорошему</string>
    <string name="answer7Two">Может быть, иногда и скорее в шутку</string>
    <string name="answer7Three">Да, и мне не кажется, что это манипуляция. Делать все для любимого человека — это нормально</string>

    <string name="answer8One">Нет. Все секреты навсегда останутся при мне</string>
    <string name="answer8Two">Бывало, рассказывал (-а) близким нам обоим друзьям при партнере (-ке), и мы все вместе смеялись. Ничего криминального</string>
    <string name="answer8Three">Да, рассказывал (-а) близкому мне другу. Но я точно знаю, что он никому его не расскажет, можно не переживать</string>

    <string name="answer9One">Буду ее/его спасать — кто, как не любимый человек, сможет помочь</string>
    <string name="answer9Two">Поговорю с ней/ним и поделюсь своей тревогой за ее/его самочувствие</string>
    <string name="answer9Three">Тут и обсуждать нечего. Если человеку важны наши отношения, он изменится ради меня</string>

    <string name="answer10One">Нет, не припоминаю такого</string>
    <string name="answer10Two">Да, бывает, говорю от души и не со зла</string>
    <string name="answer10Three">Почти всегда так говорю и не считаю это чем‑то плохим — такое обращение, наоборот, показывает мою любовь</string>


    //others
    <string name="toast_message">Вы выбрали не все пункты!</string>

    //result
    <string name="less17">Вы стремитесь к здоровым отношениям и уважительно относитесь к чувствам своего партнера (-ки)</string>
    <string name="more16">Кажется, вы стараетесь уважительно относиться к мнению и чувствам партнера (-ки), но вам, определенно, есть над чем поработать</string>
    <string name="more26">Похоже, у вас есть признаки абьюзивного поведения</string>
    <string name="remake">Повторить тест</string>
    <string name="main_menu">Основное меню</string>
    <string name="title">Я — абьюзер? Пройдите тест и узнайте</string>
    <string name="number_of_question">number_of_qustion</string>
    <string name="task">task</string>
    <string name="next">Дальше</string>
    <string name="todo">TODO</string>
    <string name="description">Мы подготовили тест с типичными ситуациями из жизни, которые могут служить маркерами абьюзивного поведения в отношениях. Пройдите его и узнайте, все ли вы делаете правильно.</string>
</resources>