<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:background="#ffffff"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/zero_abuser">

        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/description"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:typeface="serif" />

        <LinearLayout

            android:layout_margin="8dp"
            android:background="@drawable/radio_group_background"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">


            <TextView
                android:textSize="18sp"
                android:layout_margin="8dp"
                android:fontFamily="sans-serif-medium"
                android:textColor="#000000"
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title" />

            <TextView
                android:textColor="#585858"
                android:textSize="16sp"
                android:fontFamily="sans-serif-medium"
                android:layout_margin="8dp"
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number_of_question" />

            <TextView
                android:textSize="18sp"
                android:layout_margin="8dp"
                android:fontFamily="sans-serif-medium"
                android:textColor="#000000"
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/task" />

            <RadioGroup

                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:buttonTint="#000000"
                    android:textColor="#000000"
                    android:textSize="17sp"
                    android:padding="12dp"
                    android:id="@+id/a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#000000"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp" />

                <RadioButton
                    android:buttonTint="#000000"
                    android:textSize="17sp"
                    android:padding="12dp"
                    android:textColor="#000000"
                    android:id="@+id/b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#000000"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp" />

                <RadioButton
                    android:id="@+id/c"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:buttonTint="#000000"
                    android:padding="12dp"
                    android:textColor="#000000"
                    android:textSize="17sp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#000000"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp" />



                <Button
                    android:textColor="#ffffff"
                    android:background="#000000"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:onClick="answerOnQuestion"
                    android:id="@+id/button12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/next" />


            </RadioGroup>


        </LinearLayout>



    </LinearLayout>

</ScrollView>